--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,20 +1,32 @@
 <h1> Sign Up </h1>
 
-<%= form_with model: @user, url: sign_up_path do |form| %>
-<div class= "mb-3">
-    <%= form.label :email %>
-    <%= form.text_field :email , class: "form-control"%>
-</div>   
-<div class= "mb-3">
-    <%= form.label :password %>
-    <%= form.password_field :password, class: "form-control" %>
-    
-</div>
-<div class= "mb-3">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation, class: "form-control" %>
+<%= form_with model: @user, url: sign_up_path, local: true, data: { turbo: false } do |form| %>  
+    <% if @user.errors.any? %>
+        <div class= "alert alert-danger">
+          <% @user.errors.full_messages.each do |message| %>
+            <div><%= message %></div>
+        <% end %>
+        </div>
+    <% end %>
 
- </div>
+
+    <div class= "mb-3">
+    <%= form.label :email %>
+    <%= form.text_field :email , class: "form-control", placeholder:"ericpham@junkmail.com" %>
+    </div>   
+    <div class= "mb-3">
+    <%= form.label :password %>
+    <%= form.password_field :password, class: "form-control", placeholder:"password" %>
+    
+        </div>
+    <div class= "mb-3">
+    <%= form.label :password_confirmation %>
+    <%= form.password_field :password_confirmation, class: "form-control", placeholder:"password" %>
+
+    </div>
+    <div class= "mb-3">
+    <%= form.submit %>
+    </div>
 
 <% end %>
 
