--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,10 @@
          
         </li>
         <li class="nav-item">
+          <%= link_to "Sign Up", sign_up_path, class:"nav-link" %>
+         
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Make Bookings</a>
         </li>
         <li>
