added more to navbar and created current user controller

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,5 +1,7 @@
 <h1> Event Planner </h1>
 
-<% if @user %>
- Logged in as: <%= @user.email %>
+<% if Current.user %>
+ Logged in as: <%= Current.user.email %>
+
+ <%= button_to "Logout", logout_path, method: :delete %>
 <% end %>
