--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light fs-4">
   <div class="container-fluid">
-   <%= link_to "Navbar", root_path, class:"navbar-brand" %>
+   <%= link_to "Event Planner", root_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,20 +8,34 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <%= link_to "Home", homepage_path, class:"nav-link" %>
-         
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign Up", sign_up_path, class:"nav-link" %>
-         
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Make Bookings</a>
         </li>
         <li>
-      
         <a class= "nav-link" href="#"> Existing Bookings</a>
         </li>
-        
+      </ul>
+
+
+      <ul class= "navbar-nav ms-auto mb-2 mg-lg-0 gap-2"
+        <% if Current.user %>
+        <li class= "nav-item">
+            <span class="navbar-text fs-4 "><%= Current.user.email %></span>
+        </li>
+
+        <li class= "nav-item">
+            <%= button_to "Logout", logout_path, method: :delete,  class:"navbar navbar-dark bg-primary" %>
+        </li>
+        <% else %>
+        <li class= "nav-item">
+            <%= link_to "Sign Up", sign_up_path, class:"nav-link" %>
+        </li>
+        <li class= "nav-item">
+            <%= link_to "Sign In", sign_in_path, class:"nav-link" %>
+        </li>
+        <% end %>
+
       </ul>
     </div>
   </div>
