--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -9,7 +9,15 @@
         </div>
     <% end %>
 
+    <div class= "mb-3">
+    <%= form.label :first_name %>
+    <%= form.text_field :first_name , class: "form-control", placeholder:"Your First Name" %>
+    </div> 
 
+    <div class= "mb-3">
+    <%= form.label :last_name %>
+    <%= form.text_field :last_name , class: "form-control", placeholder:"Your Last Name" %>
+    </div> 
     <div class= "mb-3">
     <%= form.label :email %>
     <%= form.text_field :email , class: "form-control", placeholder:"ericpham@junkmail.com" %>
