--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light fs-4">
+ <nav class="navbar navbar-expand-lg bg-light fs-4">
   <div class="container-fluid">
    <%= link_to "Event Planner", root_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +10,10 @@
           <%= link_to "Home", homepage_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Make Bookings</a>
+          <a class="nav-link" href="booking_types">Make Bookings</a>
         </li>
         <li>
-        <a class= "nav-link" href="#"> Existing Bookings</a>
+        <a class= "nav-link" href="bookings"> Existing Bookings</a>
         </li>
       </ul>
 
