got bookings to be created with a type

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -39,7 +39,7 @@
 
   <div>
     <%= form.label :booking_type_id, style: "display: block" %>
-    <%= form.text_field :booking_type %>
+    <%= form.text_field :booking_type_id %>
   </div>
 
   <div>
