showing types and bookings on home page

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -38,8 +38,9 @@
 
 
   <div>
-    <%= form.label :booking_type_id, style: "display: block" %>
-    <%= form.text_field :booking_type_id %>
+  Category: <b><%= @booking_type.category %></b>
+    
+  <%= form.hidden_field :booking_type_id, :value => @booking_type.id%>
   </div>
 
   <div>
