--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
           <%= link_to "Home", homepage_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="booking_types">Make Bookings</a>
+        <%= link_to 'Make Bookings', booking_types_path, class: 'nav-link' %>
         </li>
         <li>
-        <a class= "nav-link" href="bookings"> Existing Bookings</a>
+        <%= link_to 'Existing Bookings', bookings_path, class: 'nav-link' %>
         </li>
       </ul>
 
