--- a/app/views/booking_types/_form.html.erb
+++ b/app/views/booking_types/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :category, style: "display: block" %>
-    <%= form.text_field :catergory %>
+    <%= form.text_field :category %>
   </div>
 
   <div>
