--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,17 +1,13 @@
-<%= form_with(model: booking) do |form| %>
-  <% if booking.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
-
-      <ul>
-        <% booking.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+<%= form_with model: @booking do |form| %>
+  <% if @booking.errors.any? %>
+  <div class= "alert alert-danger">
+  <% @booking.errors.full_messages.each do |message| %>
+    <div><%= message %></div>
   <% end %>
-
-  <div>
+    </div>
+<% end %>
+<div>
+  <div >
     <%= form.label :first_name, style: "display: block" %>
     <%= form.text_field :first_name %>
   </div>
@@ -21,10 +17,6 @@
     <%= form.text_field :last_name %>
   </div>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
-  </div>
 
   <div>
     <%= form.label :start_at, style: "display: block" %>
@@ -46,4 +38,6 @@
   <div>
     <%= form.submit %>
   </div>
+
+
 <% end %>
