--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,36 @@
 <h1>Editing booking</h1>
 
-<%= render "form", booking: @booking %>
+<%= form_with(model: @booking) do |form| %>
+  <div>
+    <%= form.label :first_name, style: "display: block" %>
+    <%= form.text_field :first_name %>
+  </div>
+
+  <div>
+    <%= form.label :last_name, style: "display: block" %>
+    <%= form.text_field :last_name %>
+  </div>
+
+  <div>
+    <%= form.label :email, style: "display: block" %>
+    <%= form.text_field :email %>
+  </div>
+
+  <div>
+    <%= form.label :start_at, style: "display: block" %>
+    <%= form.datetime_field :start_at %>
+  </div>
+
+  <div>
+    <%= form.label :end_at, style: "display: block" %>
+    <%= form.datetime_field :end_at %>
+  </div>
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
+
+  
 
 <br>
 
