--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -2,29 +2,36 @@
 <h1> Event Planner </h1>
 
 <% if Current.user %>
-  Logged in as: <%= Current.user.first_name.capitalize %>
+  Logged in as: <%= Current.user.first_name %>
 <% end %>
-
+ 
 
 <br />
+<div class = "container text-center">
 <% if @booking_types.present? %>
   <% @booking_types.each do |booking_type| %>
+   
+   
     <%= link_to booking_type.category, new_booking_path(booking_type: booking_type.category), class: '' %>
     <br/>
+
   <% end %>
 <% end %>
+ </div>
 
 <br />
 <% if @bookings.present? %>
   <% @bookings.each do |booking| %>
-    <%= link_to 'Show', booking_path(booking), class: '' %>
-    <table>
+    
+    
+    <table class= "table mt-5">
       <thead> 
       <tr>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Status</th>
-        <th>Booking type</th>
+        <th scope="col"> First name</th>
+        <th scope="col">Last name</th>
+        <th scope="col">Status</th>
+        <th scope="col">Booking type</th>
+        <th scope="col"> Description</th>
       </tr>
       </thead>
       <tbody>
@@ -33,8 +40,10 @@
         <td><%= booking.last_name %></td>
         <td><%= booking.status %></td>
         <td><%= booking.booking_type.category %></td>
+        <td><%= booking.booking_type.description %></td>
       </tr>
       </tbody>
     </table>
+    <%= link_to 'Show', booking_path(booking), class: '' %>
   <% end %>
 <% end %>
