--- a/app/views/booking_types/_form.html.erb
+++ b/app/views/booking_types/_form.html.erb
@@ -13,24 +13,26 @@
 
   <div>
     <%= form.label :category, style: "display: block" %>
-    <%= form.text_field :category %>
+    <%= form.text_field :category, class:"form-control text-center" %>
   </div>
 
   <div>
     <%= form.label :location, style: "display: block" %>
-    <%= form.text_field :location %>
+    <%= form.text_field :location , class:"form-control text-center"%>
   </div>
 
   <div>
     <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
+    <%= form.text_area :description, class:"form-control text-center" %>
   </div>
 
  
 
   <div>
+ 
     <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
+    <%= form.text_field :user_id, class:"form-control text-center"%>
+
   </div>
 
   <div>
