--- a/app/views/booking_types/edit.html.erb
+++ b/app/views/booking_types/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this booking type", @booking_type %> |
-  <%= link_to "Back to booking types", booking_types_path %>
+  <%= link_to "Show this booking type", @booking_type, class: "btn btn-primary" %> 
+  <%= link_to "Back to booking types", booking_types_path, class:"btn btn-primary"%>
 </div>
