--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
           <%= link_to "Home", homepage_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-        <%= link_to 'Make Bookings', booking_types_path, class: 'nav-link' %>
+        <%= link_to ' Booking Types', booking_types_path, class: 'nav-link' %>
         </li>
         <li>
         <%= link_to 'Existing Bookings', bookings_path, class: 'nav-link' %>
