--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @booking do |form| %>
+  <%= form_with model: @booking do |form| %>
   <% if @booking.errors.any? %>
   <div class= "alert alert-danger">
   <% @booking.errors.full_messages.each do |message| %>
@@ -33,6 +33,15 @@
   Category: <b><%= @booking_type.category %></b>
     
   <%= form.hidden_field :booking_type_id, :value => @booking_type.id%>
+  </div>
+
+  <div>
+  <% if Current.user %>
+    User ID: <b><%= Current.user.id %></b>
+
+ 
+    <%= form.hidden_field :user_id, :value => Current.user.id%>
+  <% end %>
   </div>
 
   <div class= "mb-3 ">
