--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,7 @@
- <div class= "d-flex align-items-center justify-content-center">
+ <div class= "align-items-center text-center justify-content-center">
 <h1> Welcome To Event Planner</h1>
 
+
+
+<h1>This application can be used to create bookings based on a booking type that are either pre-defined or be created based on your personal needs. Please sign up and log in using the links on the top right before using the app.</h1>
+</div>
