made changes to multiple files

--- a/app/views/booking_types/new.html.erb
+++ b/app/views/booking_types/new.html.erb
@@ -5,6 +5,6 @@
 
 <br>
 
-<div>
-  <%= link_to "Back to booking types", booking_types_path %>
+<div class= "text-center ">
+  <%= link_to "Back to booking types", booking_types_path, class:"btn btn-primary" %>
 </div>
