--- a/app/views/booking_types/_form.html.erb
+++ b/app/views/booking_types/_form.html.erb
@@ -1,14 +1,10 @@
-<%= form_with(model: booking_type) do |form| %>
-  <% if booking_type.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(booking_type.errors.count, "error") %> prohibited this booking type from being saved:</h2>
-
-      <ul>
-        <% booking_type.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+<%= form_with model: @booking_type, local: true, data: { turbo: false }  do |form| %>
+  <% if @booking_type.errors.any? %>
+  <div class= "alert alert-danger">
+    <% @booking_type.errors.full_messages.each do |message| %>
+      <div><%= message %></div>
+  <% end %>
+  </div>
   <% end %>
 
   <div>
