--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-  <%= form_with model: @booking do |form| %>
+  <%= form_with model: @booking, local: true, data: { turbo: false } do |form| %>
   <% if @booking.errors.any? %>
   <div class= "alert alert-danger">
   <% @booking.errors.full_messages.each do |message| %>
