--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,8 +3,9 @@
 <%= render @booking %>
 
 <div>
-  <%= link_to "Edit this booking", edit_booking_path(@booking) %> |
-  <%= link_to "Back to bookings", bookings_path %>
+  <%= link_to "Edit this booking", edit_booking_path(@booking), class: "btn btn-primary" %> |
+  <%= link_to "Back to bookings", bookings_path , class: "btn btn-primary"%>
 
-  <%= button_to "Destroy this booking", @booking, method: :delete %>
+  <%= button_to "Destroy this booking", @booking, method: :delete , class: "btn btn-warning mt-3"%>
+  <%= link_to ' Home', homepage_path, class:"btn btn-dark mt-2" %>
 </div>
